--- a/apps/moveContent/public/movecontent.html
+++ b/apps/moveContent/public/movecontent.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="well">
-            <ul class="nav nav-tabs">
+            <ul class="nav nav-tabs" id="nav-tabs">
                 <li class="active"><a href="" id="move-blog-posts-tab" data-toggle="tab">Move Blog Posts</a></li>
                 <li><a href="" id="move-other-content-tab" data-toggle="tab">Move other content</a></li>
             </ul>
@@ -36,7 +36,7 @@
                 <div class="tab-pane active" id="move-other-content-pane">
                     <div id="content-types" class="btn-group">
                     </div>
-                    <div class="container">
+                    <div>
                         <input id="moveContent" type='submit' value="Move Content" class="btn btn-success"/>
                         <input id="refreshContent"  value="Refresh Content" class="btn btn-success"/>
                         <div id="filters" class="btn-group pull-right">
